# slackcord

./: .gitignore  .replit  README.md  discordapp.py  pyproject.toml  slackapp.py  watch.py  watch2.py
Scripts/: activate  activate.bat
