[tool.poetry]
name = "repl_python3_slackcord"
version = "0.1.0"
description = ""
authors = ["myrrhkhan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
discord = "^1.7.3"
slack-bolt = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
